--- a/html-kaguya/css/main.css
+++ b/html-kaguya/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 /* ===== header ===== */
 header {
-    width: 1280px;
+    max-width: 1280px;
     position: fixed;
     left: 0;
     right: 0;
@@ -42,10 +42,13 @@ h1 img{
     color: #3b3b3b;
     padding-left: 56px;
     letter-spacing: 0px;
+    font-size: 16px;
 }
 .header-nav a {
     color: #b2b2b2;
     font-size: 16px;
+    letter-spacing: 0px;
+
 }
 
 /* ===========Home=========== */
@@ -394,16 +397,14 @@ footer {
 /* =====r-main-container===== */
 .r-main-container {
     width: 640px;
-    height: 624px;
     margin: 161px auto 320px auto;
     text-align: center;
 }
 .recruit-information {
     width: 640px;
-    height: 624px;
     border-collapse: collapse;
-    border: 1px solid #707070;
     border-radius: 4px;
+    
 }
 .recruit-information caption {
     font-size: 23px;
@@ -411,10 +412,44 @@ footer {
     padding-bottom: 32px;
     color: #3b3b3b;
 }
+.recruit-title1 {
+    height: 288px;
+}
+.recruit-title2 {
+    height: 334px;
+}
+tr {
+    width: 640px;
+}
+.t-recruit1 {
+    height: 120px;
+}
+.recruit1 {
+    height: 86px;
+}
+.recruit2 {
+    height: 38px;
+}
+.t-recruit2 {
+    height: 72px;
+}
+.recruit3 {
+    height: 64px;
+}
+.t-recruit3 {
+    height: 96px;
+}
+.recruit4 {
+    height: 134px;
+}
+.t-recruit4 {
+    height: 168px;
+}
 th,td {
     border: 1px solid #707070;
     letter-spacing: 0px;
 }
+
 th {
     font-size: 16px;
     font-weight: normal;
@@ -423,20 +458,28 @@ th {
     padding: 0 13.5px;
 }
 td {
-    padding-left: 48px;
+    padding: 16px 0 16px 48px;
+    font-size: 16px;
+    font-weight: normal;
     text-align: left;
 }
-.work-contents {
+.working-time {
+    height: 64px;
+}
+.recruit-information ul {
     line-height: 23px;
     font-size: 14px;
     letter-spacing: 0px;
     color: #3b3b3b;
-    text-indent: 1.4em;
+    list-style-type: none;
     margin-top: 8px;
 }
-td small {
+.work-contents {
+    font-size: 14px;
+    line-height: 21px;
     margin-top: 8px;
 }
+
 /* =====/r-main-container===== */
 /* ===========/Recruit=========== */
 
@@ -461,6 +504,7 @@ td small {
     letter-spacing: 2.4px;
     color: #3b3b3b;
     padding-bottom: 40px;
+    font-weight: normal;
 }
 .contact-title p {
     font-size: 15px;
