--- a/html-kaguya/css/main.css
+++ b/html-kaguya/css/main.css
@@ -412,74 +412,47 @@ footer {
     padding-bottom: 32px;
     color: #3b3b3b;
 }
-.recruit-title1 {
-    height: 288px;
-}
-.recruit-title2 {
-    height: 334px;
-}
-tr {
-    width: 640px;
-}
-.t-recruit1 {
-    height: 120px;
-}
-.recruit1 {
-    height: 86px;
-}
-.recruit2 {
-    height: 38px;
-}
-.t-recruit2 {
-    height: 72px;
-}
-.recruit3 {
-    height: 64px;
-}
-.t-recruit3 {
-    height: 96px;
-}
-.recruit4 {
-    height: 134px;
-}
-.t-recruit4 {
-    height: 168px;
-}
 th,td {
     border: 1px solid #707070;
     letter-spacing: 0px;
+    font-weight: normal;
 }
 
 th {
     font-size: 16px;
-    font-weight: normal;
     color: #3b3b3b;
     background-color: #d1d1d1;
     padding: 0 13.5px;
 }
 td {
-    padding: 16px 0 16px 48px;
+    padding: 15px 0 15px 48px;
     font-size: 16px;
     font-weight: normal;
     text-align: left;
 }
-.working-time {
-    height: 64px;
-}
 .recruit-information ul {
-    line-height: 23px;
+    line-height: 21px;
     font-size: 14px;
     letter-spacing: 0px;
     color: #3b3b3b;
     list-style-type: none;
     margin-top: 8px;
 }
-.work-contents {
-    font-size: 14px;
-    line-height: 21px;
-    margin-top: 8px;
+.recruit4 ul {
+    line-height: 22px;
 }
-
+.recruit-information li::before {
+    content: "・";
+} 
+.work-contents1 {
+    font-size: 14px;
+    margin-top: 7px;
+}
+.work-contents2 {
+    font-size: 14px;
+    line-height: 20px;
+    margin-top: 7px;
+}
 /* =====/r-main-container===== */
 /* ===========/Recruit=========== */
 
