--- a/html-kaguya/css/main.css
+++ b/html-kaguya/css/main.css
@@ -52,12 +52,12 @@ body.fadeout::after {
 }
 /* ===== header ===== */
 header {
-  width: 1280px;
+  width: 1282px;
   position: fixed;
   left: 0;
   right: 0;
   margin: auto;
-  z-index: 2;
+  z-index: 100;
   height: 56px;
   background: #fff;
 }
@@ -97,12 +97,12 @@ h1 img {
     right: 0;
     position: fixed;
     background-color: #918f89;
+    z-index: 100;
   }
   .header-container {
     height: 56px;
     background: url(../image/logo_footer.png) no-repeat center;
     background-size: 39.69px 24px;
-    z-index: 100;
     box-shadow: 0px 3px 6px #00000029;
   }
   h1 {
@@ -111,7 +111,6 @@ h1 img {
 
   /* ハンバーガーメニュー */
   .header-container nav {
-    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
@@ -416,14 +415,15 @@ main {
 .news1 p,
 .news2 p,
 .news3 p {
+  width: 320px;
   font-size: 17px;
   color: #fff;
   letter-spacing: -0.85px;
-  position: relative;
-  z-index: 3;
+  position: absolute;
+  right: 0;
   text-shadow: 0 0 6px #000000e0;
   display: none;
-  padding-top: 140px;
+  z-index: 5;
 }
 
 .news2 {
@@ -440,32 +440,38 @@ main {
   background: url(../image/news03.png) no-repeat;
   position: relative;
 }
-/* .news-background {
-  content: "";
+.news-background {
   background-color: #000000;
-  opacity: 0.6;
+  width: 320px;
+  height: 320px;
   position: absolute;
-  top: 0;
-  left: 0;
   bottom: 0;
-  right: 0;
-  z-index: 2;
+  display: none;
+  opacity: 0.6;
+  /* opacity: 0;
+  transform: translateY(20px);
+  transition: all 1s; */
+}
+
+/* .news-background.action {
+  opacity: 0.6;
+  transform: translateY(0);
 } */
-.news1::before,
+/* .news1::before,
 .news2::before,
 .news3::before {
   content: "";
   background-color: #000000;
   opacity: 0.6;
   /* position: absolute;
-  bottom: 0; */
+  bottom: 0;
 
   top: 0;
   left: 0;
   right: 0;
   position: absolute;
   bottom: 0;
-}
+} */
 .news a {
   font-size: 18px;
   letter-spacing: 0.9px;
@@ -607,7 +613,6 @@ textarea {
 }
 
 /* ボタンが押された後の状態 */
-/* ここから320pxまで伸ばす */
 .submit.active {
   color: #707070;
 
@@ -642,8 +647,6 @@ textarea {
     width: 173px;
     height: 48px;
     border-radius: 30px;
-    /* SEND→Send */
-    /* font-size: 0; */
   }
   .submit::before {
     font-size: 18px;
