--- a/html-kaguya/css/main.css
+++ b/html-kaguya/css/main.css
@@ -191,28 +191,22 @@ h1 img {
   .navToggle span:nth-child(3) {
     top: 16px;
   }
-
+  /* 参考：https://nodoame.net/archives/8771 */
   /* クリックした後 */
   /* 最初のspanをマイナス45度に */
   .navToggle.active span:nth-child(1) {
     top: 8px;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
 
   /* 2番目のspanは右へスライドアウト */
   .navToggle.active span:nth-child(2) {
-    -webkit-transform: translateX(200px);
-    -moz-transform: translateX(200px);
     transform: translateX(200px);
   }
 
   /* 3番目のspanは45度に */
   .navToggle.active span:nth-child(3) {
     top: 8px;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
     transform: rotate(45deg);
   }
 }
